// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with address and name but no number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
            },
            {
              "color": "hsl(0, 67%, 24%)",
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    0x0000...7E57
  </Text>
</View>
`;

exports[`Avatar renders correctly with address but no name nor number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <svg
        fill="hsl(0, 53%, 93%)"
        height="40"
        style={{}}
        viewBox="0 0 40 40"
        width="40"
      />
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    feedItemAddress, {"address":"0x0000...7E57"}
  </Text>
</View>
`;

exports[`Avatar renders correctly with just number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <svg
        fill="hsl(0, 53%, 93%)"
        height="40"
        style={{}}
        viewBox="0 0 40 40"
        width="40"
      />
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    +14155556666
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginRight": 4,
          },
        ]
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      +1 415-555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly with number and name 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
            },
            {
              "color": "hsl(0, 67%, 24%)",
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginRight": 4,
          },
        ]
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      +1 415-555-6666
    </Text>
  </View>
</View>
`;
